# poc-ros2

./: README.md
PXA-100_description/: package.xml  setup.cfg  setup.py
PXA-100_description/launch/: display.launch.py  gazebo.launch.py
PXA-100_description/meshes/: Fore_-_1_-_PX-100_v2_1_1.stl  PX-100_Shoulder_v3_1_1.stl  PX100_SRG_v3_1_1.stl  SIMPLIFIED_-_PXA-100-UA_v4_1_1.stl  SRG_Carriage_With_Finger_v3_1_1.stl  SRG_Carriage_With_Finger_v3_2_1.stl  base_link.stl
PXA-100_description/urdf/: PXA-100.gazebo  PXA-100.trans  PXA-100.urdf  PXA-100.xacro  materials.xacro  px.urdf
Station_description/: package.xml  setup.cfg  setup.py
Station_description/launch/: display.launch.py  gazebo.launch.py
Station_description/meshes/: base_link.stl
Station_description/urdf/: Station.gazebo  Station.trans  Station.urdf  Station.xacro  materials.xacro
ajgar_description/: package.xml  setup.cfg  setup.py
ajgar_description/config/: display.rviz
ajgar_description/launch/: display.launch.py  gazebo.launch.py
ajgar_description/meshes/: base_top_1.stl  elbow_1.stl  end__1.stl  shoulder_1.stl  suction_1.stl  wrist_1.stl
ajgar_description/urdf/: ajgar.gazebo  ajgar.trans  ajgar.xacro  arm.urdf  scene.xacro
fcl_coll/: CMakeLists.txt  package.xml
fcl_coll/meshes/: imu_1.stl
fcl_coll/src/: fcl_self_collision.cpp  fcl_without_marker.cpp  self.cpp
fcl_coll/urdf/: robot_arm.urdf
fcl_coll/urdf2/: mr_robot.gazebo  mr_robot.xacro
fixture_table_description/: package.xml  setup.cfg  setup.py
fixture_table_description/launch/: display.launch.py  gazebo.launch.py
fixture_table_description/meshes/: base_link.stl
fixture_table_description/urdf/: fixture_table.gazebo  fixture_table.trans  fixture_table.urdf  fixture_table.xacro  materials.xacro
kdl_ik_solver/: CMakeLists.txt  package.xml
kdl_ik_solver/src/: kdl_ik_solver_node.cpp  tracik_marker.cpp  track_ik_solver_node.cpp
mr_robot_description/: package.xml  setup.cfg  setup.py
mr_robot_description/launch/: display.launch.py
mr_robot_description/meshes/: Lidar_1.stl  gps_1.stl  left_wheel_1.stl  right_wheel__1.stl
mr_robot_description/urdf/: mr_robot.xacro
mr_robot_gazebo/: CMakeLists.txt  package.xml
mr_robot_gazebo/launch/: gazebo.launch.py  urdf.launch.py  visual.launch.py
mr_robot_gazebo/scripts/: fcl_collision_checker.cpp
mr_robot_gazebo/src/: collision_checker_node.cpp  urdf_to_fcl.cpp
mr_robot_gazebo/worlds/: sonoma_raceway.world
mr_robot_navigation/: CMakeLists.txt  package.xml
mr_robot_navigation/config/: gps_wpf_demo.mvc  nav2_no_map_params.yaml  params.yaml  waypoints.yaml
mr_robot_navigation/launch/: dual_ekf_navsat.launch.py  gps_waypoint_follower.launch.py  mapviz.launch.py
mr_robot_navigation/scripts/: gps_waypoint_logger.py  interactive_waypoint_follower.py  logged_waypoint_follower.py
