<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fcl_coll</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vansh4452@gmail.com">vansh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>geometric_shapes</depend>
  <depend>fcl</depend>
  <exec_depend>resource_retriever</exec_depend>
  <build_depend>resource_retriever</build_depend>
  <build_export_depend>resource_retriever</build_export_depend>
  <depend>eigen3</depend>
  <depend>tf2_ros</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>assimp</depend>

<depend>eigen3_cmake_module</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
