<?xml version="1.0"?>
<package format="3">
  <name>kdl_ik_solver</name>
  <version>0.0.1</version>
  <description>KDL and TracIK-based IK solver</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>interactive_markers</depend>

  <!-- <depend>trac_ik_lib</depend> -->


  <!-- Eigen3 is usually included via system packages, no need to declare -->
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
