<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mr_robot_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nighthawks@todo.todo">nighthawks</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>xacro</depend> 
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>geometric_shapes</depend>
  <depend>fcl</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>assimp</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
